samples/_failures_safe/1760884790_f750ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3e279fe.c: In function ‘main’:
./samples/SAFE/__tmp_d3e279fe.c:145:9: error: expected expression at end of input
  145 |         choice = read_int("Choose operation: ", 1,
      |         ^~~~~~
./samples/SAFE/__tmp_d3e279fe.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3e279fe.c:145:9: error: expected declaration or statement at end of input
